# Robosub2018

./: .gitignore  README.md  auv_start.bash
arduino/hydrophone_test/: hydrophone_test.ino
arduino/leveling_with_motor/: leveling_with_motor.ino
auv_cal_state_la_2017/: CMakeLists.txt  package.xml
bash_scripts/: camera-settings.bash
ez_async_data/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
ez_async_data/catkin/catkin_generated/version/: package.cmake
ez_async_data/catkin_generated/: ez_async_data-msg-extras.cmake.develspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
ez_async_data/catkin_generated/installspace/: _setup_util.py  ez_async_data-msg-extras.cmake  ez_async_data-msg-paths.cmake  ez_async_data.pc  ez_async_dataConfig.cmake
ez_async_data/catkin_generated/stamps/ez_async_data/: package.xml.stamp
ez_async_data/cmake/: ez_async_data-genmsg-context.py  ez_async_data-genmsg.cmake
ez_async_data/devel/: .catkin  .rosinstall  setup.sh
ez_async_data/devel/share/ez_async_data/cmake/: ez_async_data-msg-paths.cmake  ez_async_dataConfig.cmake
ez_async_data/gtest/: CTestTestfile.cmake  Makefile
ez_async_data/libvncxx/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ez_async_data/scripts/: testEZ.py
ez_async_data/src/: main.cpp
hardware_interface/: CMakeLists.txt  package.xml
misc/: camera_firmware_update_instructions.md  camera_firmware_update_instructions.txt
robosub/: CMakeLists.txt  package.xml
robosub/msg/: CVOut.msg  (+6 more)
(+195 files in other folders)
